holos/deploy/clusters/k3d-holos/components/kargo/httproute-kargo-redirect-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/name: kargo
  name: kargo-redirect-http
  namespace: kargo
spec:
  hostnames:
  - kargo.holos.internal
  parentRefs:
  - name: default
    namespace: istio-gateways
    sectionName: http
  rules:
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 301
      type: RequestRedirect
